# LODD-SV

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.py
data/: combined_train.csv  one_prompt.csv  simple_qa_train.csv  simple_qa_verified.csv  triviaqa_tiny_train.csv  truthful_qa_generation.csv  truthful_qa_multiple_choice.csv
lodd_sv/engine/: __init__.py  forward_process.py  reverse_network.py
lodd_sv/local_coding/: __init__.py  async_optimizers.py  local_loss.py
lodd_sv/math/: __init__.py  diffusion_equations.py  layer_blocks.py  state_space.py
lodd_sv/training/: __init__.py  evaluate.py  train.py
lodd_sv/verification/: __init__.py  knowledge_base.py  router.py  uncertainty.py
scripts/: build_combined_csv.py  download_data.py  eval_checkpoint.py  eval_qa.py  eval_router_impact.py  generate_conditioned.py  generate_from_checkpoint.py  generate_with_router.py  run_ablations.py  run_all.py  run_eval_harness.py  train_on_data.py
tests/: test_lodd_sv.py
